adjusted font size, this is being made too big to compensate for some styling in the theme - added spritesheet from Civi to extension to avoid trying to construct a path to it, disabled select box styling temporarily

--- a/default.css
+++ b/default.css
@@ -15,6 +15,10 @@
     src: url(fonts/SourceSansPro-Semibold.ttf);
 }
 
+#crm-container {
+    font-size:12px;
+}
+
 /* CiviCRM Menu */
 #civicrm-menu.disabled {
     
@@ -536,7 +540,7 @@ crm-container .crm-accordion-wrapper {
 /* Make icons black rather than white */
 
 .crm-container .button .icon, .crm-container .crm-button .icon {
-    background-image: url("../../../all/modules/civicrm/i/icons/jquery-ui-52534D.png");
+    background-image: url("images/jquery-ui-3E3E3E.png");
 }
 
 /* -- general form elements */
@@ -545,9 +549,14 @@ crm-container .crm-accordion-wrapper {
     color: #444;
     font-size: 14px !important;
 }
-.crm-container label, .crm-container tr, .crm-container div.crm-clear {
+.crm-container label, .crm-container div.crm-clear {
 	font-size: 1.15em;
 }
+
+.crm-container tr {
+    font-size: 1em;
+}
+
 .crm-container div.crm-clear {
 	font-size: 0.8em;
 }
